Added authentication example

--- a/labs/khoi/chat-application/backup/display.html
+++ b/labs/khoi/chat-application/backup/display.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Example for Firebase</title>
-    <script src="scripts/jquery-3.3.1.min.js"></script>
+    <script src="../scripts/jquery-3.3.1.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
     <script>
         // Initialize Firebase
