--- a/labs/khoi/chat-application/backup/index.html
+++ b/labs/khoi/chat-application/backup/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Example for Firebase</title>
-    <script src="scripts/jquery-3.3.1.min.js"></script>
+    <script src="../scripts/jquery-3.3.1.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
     <script>
         // Initialize Firebase
@@ -49,8 +49,8 @@
         <p id="dspOutput"></p>
     </div>
 
-    <script src="scripts/functions.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="script/functions.js"></script>
+    <script src="script/main.js"></script>
     <script>
         //The real-time data and update by itself when data changed from database server
         let path = "users";
