--- a/labs/khoi/chat-application/backup/authentication.html
+++ b/labs/khoi/chat-application/backup/authentication.html
@@ -3,22 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Authentication</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="scripts/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="../scripts/jquery-3.3.1.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
-    <script>
-        // Initialize Firebase
-        let config = {
-            apiKey: "AIzaSyCLy8U4Wy0D0qYAVezelDt-TrFiueCfYng",
-            authDomain: "ecchat-c34bf.firebaseapp.com",
-            databaseURL: "https://ecchat-c34bf.firebaseio.com",
-            projectId: "ecchat-c34bf",
-            storageBucket: "ecchat-c34bf.appspot.com",
-            messagingSenderId: "258738066233"
-        };
-        firebase.initializeApp(config);
-        let database = firebase.database();
-    </script>
+    <script src="../scripts/config.js"></script>
 </head>
 <body>
 
@@ -42,7 +30,8 @@
 
     <div id="systemMessages"></div>
 
-    <script src="scripts/web-addons.js"></script>
-    <script src="scripts/authentication.js"></script>
+    <script src="../scripts/lib.js"></script>
+    <script src="../scripts/user.js"></script>
+    <script src="script/authentication.js"></script>
 </body>
 </html>
