Beginning with the chat web application

--- a/create-user.html
+++ b/create-user.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Authentication</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <script src="../scripts/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="scripts/jquery-3.3.1.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
-    <script src="../scripts/config.js"></script>
 </head>
 <body>
 
@@ -30,8 +29,9 @@
 
     <div id="systemMessages"></div>
 
-    <script src="../scripts/lib.js"></script>
-    <script src="../scripts/user.js"></script>
-    <script src="script/authentication.js"></script>
+    <!-- Script -->
+    <script src="scripts/config.js"></script>
+    <script src="scripts/library.js"></script>
+    <script src="scripts/user.js"></script>
 </body>
 </html>
