--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
 
     <!-- Script -->
     <script src="scripts/config.js"></script>
-    <script src="scripts/lib.js"></script>
+    <script src="scripts/library.js"></script>
     <script src="scripts/user.js"></script>
 </body>
 </html>
