Created sorting for working directory

--- a/login.html
+++ b/login.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Authentication</title>
+    <title>ChatApp - Login</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="scripts/jquery-3.3.1.min.js"></script>
+    <script src="external-resources/jquery-3.3.1.min.js"></script>
+    <script src="external-resources/library.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
 </head>
 <body>
@@ -13,7 +14,7 @@
     <div id="login">
         <h1>LOGIN</h1>
         <form action="#" id="frmLogin">
-            <h3>The user account</h3>
+            <h3>YOUR ACCOUNT</h3>
             <label for="txtEmail">Email</label><br>
             <input type="text" id="txtEmail"><br>
             <label for="txtPassword">Password</label><br>
@@ -27,7 +28,7 @@
 
     <!-- Script -->
     <script src="scripts/config.js"></script>
-    <script src="scripts/library.js"></script>
+    <script src="scripts/functions.js"></script>
     <script src="scripts/user.js"></script>
 </body>
 </html>
