--- a/create-user.html
+++ b/create-user.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Authentication</title>
+    <title>ChatApp - Creating account</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="scripts/jquery-3.3.1.min.js"></script>
+    <script src="external-resources/jquery-3.3.1.min.js"></script>
+    <script src="external-resources/library.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
 </head>
 <body>
@@ -13,12 +14,12 @@
     <div id="createUser">
         <h1>CREATE USER</h1>
         <form action="#" id="frmCreateUser">
-            <h3>The user account</h3>
+            <h3>YOUR ACCOUNT</h3>
             <label for="txtEmail">Email</label><br>
             <input type="text" id="txtEmail"><br>
             <label for="txtPassword">Password</label><br>
             <input type="text" id="txtPassword"><br>
-            <h3>The user profile</h3>
+            <h3>YOUR PROFILE</h3>
             <label for="txtFullname">Fullname</label><br>
             <input type="text" id="txtFullname"><br>
             <label for="txtPhoneNumber">Phone number</label><br>
@@ -31,7 +32,7 @@
 
     <!-- Script -->
     <script src="scripts/config.js"></script>
-    <script src="scripts/library.js"></script>
+    <script src="scripts/functions.js"></script>
     <script src="scripts/user.js"></script>
 </body>
 </html>
