--- a/create-user.html
+++ b/create-user.html
@@ -4,31 +4,35 @@
     <meta charset="UTF-8">
     <title>ChatApp - Creating account</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="external-resources/web-addons.css">
     <script src="external-resources/jquery-3.3.1.min.js"></script>
     <script src="external-resources/web-addons.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
 </head>
 <body>
-
+<div id="container">
     <!--Create user-->
-    <div id="createUser">
-        <h1>CREATE USER</h1>
+    <div id="createUser"  class="box box-shadow frm-create-user">
+        <h1>Sign up</h1>
         <form action="#" id="frmCreateUser">
-            <h3>YOUR ACCOUNT</h3>
-            <label for="txtEmail">Email</label><br>
-            <input type="text" id="txtEmail"><br>
-            <label for="txtPassword">Password</label><br>
-            <input type="text" id="txtPassword"><br>
-            <h3>YOUR PROFILE</h3>
-            <label for="txtFullname">Fullname</label><br>
-            <input type="text" id="txtFullname"><br>
-            <label for="txtPhoneNumber">Phone number</label><br>
-            <input type="text" id="txtPhoneNumber"><br>
-            <button id="btnCreateUser" type="button">Create user</button>
+            <p>Enter your chosen account</p>
+            <input type="text" id="txtEmail" placeholder="your-email@example.com" minlength="5" maxlength="50" required><br>
+            <input type="password" id="txtPassword" placeholder="your password" minlength="6" maxlength="50" required><br>
+            <p>Create your profile</p>
+            <input type="text" id="txtDisplayName" placeholder="display name" maxlength="50" required><br>
+            <input type="text" id="txtPhoneNumber" placeholder="telephone number" maxlength="20"><br>
+            <input type="text" id="txtPhotoURL" placeholder="photo URL" maxlength="200"><br>
+            <button id="btnCreateUser" type="button" class="button button-create-user">Sign up</button>
+            <br>
+
+            <a href="login.html">Already have an account? Sign in here</a>
+
         </form>
     </div>
 
+    <div id="dspUserInfo"></div>
     <div id="systemMessages"></div>
+</div>
 
     <!-- Script -->
     <script src="scripts/config.js"></script>
