--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Script -->
     <script src="scripts/config.js"></script>
-    <script src="scripts/functions.js"></script>
+    <script src="scripts/common.js"></script>
     <script src="scripts/index.js"></script>
 </body>
 </html>
