Fixed bugs for user online state and created signout.html

--- a/signout.html
+++ b/signout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ChatApp - Chat now...</title>
+    <title>ChatApp - Sign out</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="external-resources/web-addons.css">
     <script src="external-resources/jquery-3.3.1.min.js"></script>
@@ -15,13 +15,11 @@
 
         <div id="dspUserInfo"></div>
         <div id="systemMessages"></div>
-
-        <p><a href="signout.html">Sign out</a></p>
     </div>
 
     <!-- Script -->
-     <script src="scripts/config.js"></script>
+    <script src="scripts/config.js"></script>
     <script src="scripts/common.js"></script>
-    <script src="scripts/chatapp.js"></script>
+    <script src="scripts/signout.js"></script>
 </body>
 </html>
