--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
         <div id="chatApp">
             <div id="dspPartMain">
-                <div id="chatContents" class="chatContent">Chat contents</div>
+                <div id="chatContents" class="chatContents"></div>
                 <div id="sendMessage" class="sendMessage">
                     <form action="#">
-                    <span id="dspCurrentChannel"></span><input id="txtSendMessage" type="text" maxlength="200">
+                    <span id="dspCurrentChannel"></span><input id="txtMessage" type="text" maxlength="200">
                     <button id="btnSend" class="button button-send-message">Send</button>
                     </form>
                 </div>
