--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div id="chatApp">
             <div id="dspPartMain">
-                <div id="chatContents" class="chatContents"></div>
+                <div id="chatContents" class="chatContents">Tips! Choose a channel on the right panel!</div>
                 <div id="sendMessage" class="sendMessage">
                     <form action="#">
                     <span id="dspCurrentChannel"></span><input id="txtMessage" type="text" maxlength="200">
