--- a/tools/create-channels.html
+++ b/tools/create-channels.html
@@ -12,7 +12,7 @@
     <script src="../scripts/config.js"></script>
     <script>
         $(document).ready(function () {
-            let nodeRef = database.ref("channels2/" + 1);
+            let nodeRef = database.ref("channels/" + 1);
             nodeRef.set({channelName:"general",defaultChannel:true})
                 .then(function () {$("#dspSystemMessage").append("<p>Created channel #general</p>");})
                 .catch(function () {});
