Fixed bugs for chat page. Default channel work fine now

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="container">
 
-        <div id="chatApp">
+        <div id="chatApp" class="chatApp-hidden">
             <div id="dspPartMain">
                 <div id="chatContents" class="chatContents">Tips! Choose a channel on the right panel!</div>
                 <div id="sendMessage" class="sendMessage">
