--- a/signin.html
+++ b/signin.html
@@ -22,8 +22,9 @@
             <span id="txtEmailNotify" class="notify-error"></span><br>
             <input type="password" id="txtPassword" placeholder="your password" minlength="6" maxlength="50"  required><br>
             <span id="txtPasswordNotify" class="notify-error"></span><br>
-            <button id="btnSignIn" type="button" class="button button-signin">Sign in >></button>
+            <button id="btnSignIn" type="button" class="button button-signin">Sign in</button>
         </form>
+
         <a href="signup.html">Don't have an account? Sign up here</a>
     </div>
 
