--- a/signup.html
+++ b/signup.html
@@ -27,12 +27,10 @@
             <span id="txtPhoneNumberNotify" class="notify-error"></span><br>
             <input type="text" id="txtPhotoUrl" placeholder="photo URL" maxlength="200"><br>
             <span id="txtPhotoUrlNotify" class="notify-error"></span><br>
-            <button id="btnSignUp" type="button" class="button button-signup">Sign up >></button>
-            <br>
-
-            <a href="signin.html">Already have an account? Sign in here</a>
-
+            <button id="btnSignUp" type="button" class="button button-signup">Sign up</button>
         </form>
+
+        <a href="signin.html">Already have an account? Sign in here</a>
     </div>
 
     <div id="dspUserInfo"></div>
