Fixed bugs and added display name to messages

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <div id="dspPartFunctions">
                 <div id="dspUserInfo" class="userinfo">
-                    <p>Current user info</p>
+                    <p id="dspCurrentUser"></p>
                     <p><a href="signout.html">Sign out</a></p>
                 </div>
 
