--- a/versions/beta1/signin.html
+++ b/versions/beta1/signin.html
@@ -13,7 +13,7 @@
 
 <div id="container">
 
-    <!--Sign in-->
+    <!--Create user-->
     <div id="signIn" class="box box-shadow frm-signin">
         <h1>Sign in to ChatApp</h1>
         <form action="#" id="frmSignIn">
